--- a/exposition/src/main/resources/application.properties
+++ b/exposition/src/main/resources/application.properties
@@ -6,7 +6,9 @@ spring.datasource.password=users
 spring.datasource.driver-class-name = org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.hibernate.ddl-auto = update
-logging.level.org.springframework=error
 spring.jpa.show-sql=true
+#provide port for application
 server.port=9095
+#provide logging level
 logging.level.org.dbs.shop=debug
+logging.level.org.springframework=error
