--- a/exposition/src/main/resources/application.properties
+++ b/exposition/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url = jdbc:postgresql://172.24.1.237:5436/db_shop
+spring.datasource.url = jdbc:postgresql://localhost:5432/testdb
 #provide username and password
-spring.datasource.username=users
-spring.datasource.password=users
+spring.datasource.username=postgres
+spring.datasource.password=admin
 #provide driver class name, here we are using postgresql database
 spring.datasource.driver-class-name = org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
