--- a/exposition/pom.xml
+++ b/exposition/pom.xml
@@ -32,5 +32,19 @@
             <artifactId>aspectjtools</artifactId>
             <version>1.9.5</version>
         </dependency>
+        <!-- springfox-swagger2 dependencies -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
