--- a/infrastructure/pom.xml
+++ b/infrastructure/pom.xml
@@ -34,6 +34,11 @@
             <version>1.4.200</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjtools</artifactId>
+            <version>1.9.5</version>
+        </dependency>
     </dependencies>
 
 </project>
