--- a/exposition/src/main/resources/application.properties
+++ b/exposition/src/main/resources/application.properties
@@ -1,14 +1,20 @@
-spring.datasource.url = jdbc:postgresql://localhost:5432/testdb
+spring.datasource.url = jdbc:postgresql://172.24.1.237:5436/db_shop
 #provide username and password
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.username=users
+spring.datasource.password=users
+
 #provide driver class name, here we are using postgresql database
 spring.datasource.driver-class-name = org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
+
 #provide port for application
 server.port=9095
+
 #provide logging level
 logging.level.org.dbs.shop=debug
 logging.level.org.springframework=error
+
+#force data.sql script execution
+spring.datasource.initialization-mode=always
